kube-manifests/02-NodeApp1-ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-node-clusterip-service
  labels:
    app: myapp-node
spec:
  type: ClusterIP
  selector:
    app: myapp-node
  ports:
    - port: 80
      targetPort: 80
