kube-manifests/03-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress-service
  labels:
    name: myapp-node
spec:
  rules:
    http:
      paths:
        - path: /
          backend:
            service:
              name: myapp-node-clusterip-service
              port:
                number: 3001
